--- a/src/Views/fSanPham_BaoCao.form
+++ b/src/Views/fSanPham_BaoCao.form
@@ -123,6 +123,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="In"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonInTatCaActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
