sorter tra hang

--- a/src/Views/fTraHang_Ncc.form
+++ b/src/Views/fTraHang_Ncc.form
@@ -216,7 +216,7 @@
                         </Column>
                       </TableColumnModel>
                     </Property>
-                    <Property name="rowHeight" type="int" value="30"/>
+                    <Property name="rowHeight" type="int" value="30" postCode="jTableXuatKho.setAutoCreateRowSorter(true);"/>
                     <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
                       <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                     </Property>
