--- a/src/Views/fTraHang_Kho.form
+++ b/src/Views/fTraHang_Kho.form
@@ -100,7 +100,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="14" style="0"/>
                 </Property>
-                <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
+                <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor" postCode="jTableLo.setAutoCreateRowSorter(true);">
                   <Table columnCount="4" rowCount="4">
                     <Column editable="false" title="ID l&#xf4;" type="java.lang.Object"/>
                     <Column editable="true" title="Nh&#xe0; cung c&#x1ea5;p" type="java.lang.Object"/>
