--- a/src/Views/fNhapHang.form
+++ b/src/Views/fNhapHang.form
@@ -156,7 +156,7 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Tahoma" size="14" style="0"/>
                     </Property>
-                    <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
+                    <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor" postCode="jTableSanPham.setAutoCreateRowSorter(true);">
                       <Table columnCount="10" rowCount="20">
                         <Column editable="true" title="M&#xe3; l&#xf4;" type="java.lang.Object"/>
                         <Column editable="true" title="Ng&#xe0;y nh&#x1ead;p" type="java.lang.Object"/>
